--- a/video.html
+++ b/video.html
@@ -52,7 +52,7 @@
         font-family: 'Nunito',sans-serif;
         ">
         Truy cập trang Sun Station Film, chuyên đăng phim, chuyện ngắn, video trên kênh tại đây:
-        <a href="https://quill-groovy-editor.glitch.me" target="_blank">https://quill-groovy-editor.glitch.me</a>
+        <a href="https://duck-vit.github.io/sunstation_film" target="_blank">https://duck-vit.github.io/sunstation_film</a>
         </span>
       
         <span style="
