--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
     <div id="content">
       
-      	<div id="countdown"></div>
+<!--       	<div id="countdown"></div> -->
+<!--         div countdown năm mới -->
       
         <div id="introduce_div">
             <div class="title_text" id="tt-happy">Dự định của Sun Station trong năm 2024</div>
